Fixed warnings/errors when compiling on newer versions of java. this is 0.5.7b2, please note that 0.5.7b2 will have verry difficult to see table header sort icons, this will be fixed for real in 0.5.8